--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "astro": "^4.1.1"
   },
   "devDependencies": {
