--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "astro": "^4.1.1"
   },
