--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^2.0.5",
+    "@astrojs/sitemap": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "astro": "^4.1.1",
+    "astro-seo": "^0.8.0",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
