--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "dependencies": {
     "@astrojs/mdx": "^2.0.5",
     "@astrojs/sitemap": "^3.0.5",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "astro": "^4.1.1",
     "astro-seo": "^0.8.0",
-    "sharp": "^0.33.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.2",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
