--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "strictNullChecks": true,
-    "baseUrl": "C:/Users/al-jo/Documents/programming/web/portfolio",
+    "baseUrl": ".",
     "paths": {
       "@components/*": [
         "src/components/*"
