--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "cSpell.words": [
     "astrojs",
+    "Construelectric",
+    "construelectricjv",
+    "ejepets",
+    "Ejepets",
     "getintouch",
     "githublabel",
     "langselect",
