--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "construelectricjv",
     "ejepets",
     "Ejepets",
+    "Fonticons",
     "getintouch",
     "githublabel",
     "langselect",
