--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@splidejs/splide": "^4.1.4",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
     "astro": "^5.3.0",
     "astro-seo": "^0.8.3",
     "react": "^18.2.0",
@@ -26,11 +25,28 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/parser": "^7.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-astro": "^0.33.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "sass": "^1.72.0"
+    "@astrojs/check": "0.3.1",
+    "@types/node": "20.9.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
+    "@typescript-eslint/parser": "6.11.0",
+    "eslint": "8.53.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "17.1.0",
+"eslint-config-prettier": "9.0.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-astro": "0.29.1",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-regexp": "2.1.1",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "sass": "^1.85.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "rollup"
+      ]
+    }
   }
 }
