--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
     "getintouch",
     "githublabel",
     "langselect",
-    "linkedinlabel"
+    "linkedinlabel",
+    "nextjs",
+    "tailwindcss"
   ]
 }
